# Arya

./: .gitignore  CMakeLists.txt  README.md  TODO
config/: csv.param  ml.param  nn.param  test.param
include/: AryaConfig.h.in
include/ml/: baseMl.hpp  csvParser.hpp  dataHandler.hpp  indexer.hpp  linearRegression.hpp  model.hpp  neuralNetwork.hpp  optimiser.hpp  utils.hpp
include/params/: complie.sh  main.cpp  param.l  param.lex  param.ypp  paramConstructor.cpp  paramConstructor.hpp  params.cpp  params.hpp  params_constructor.hpp  test.param  token.h
include/process/: process.hpp
include/utils/: matrix.hpp
src/: main.cpp  mlMain.cpp
src/ml/: csvParser.cpp  indexer.cpp  logisticRegression.cpp  main.cpp  neuralLayer.cpp  neuralNetwork.cpp
src/params/: main.cpp  paramConstructor.cpp  params.cpp
